[package]
name = "hashfile"
version = "1.0.2"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.20", features = ["derive"] }
dunce = "1.0.5"
hex = "0.4.3"
indicatif = "0.17.8"
itertools = "0.13.0"
pathdiff = "0.2.2"
wild = "2.2.1"
windows = { version = "0.58.0", features = ["Win32_Security_Cryptography"] }

[profile.release]
lto = "fat"